GitAssgn/force-app/main/default/objects/Position__c/fields/Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Positions2</relationshipName>
    <type>Lookup</type>
</CustomField>