GitAssgn/force-app/main/default/objects/Position__c/fields/Related_Position__c.field-meta.xml
<CustomField>
    <fullName>Related_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Position</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The related position must be in the same department. You cannot relate a position to itself.</errorMessage>
        <filterItems>
            <field>Position__c.Department__c</field>
            <operation>equals</operation>
            <valueField>$Source.Department__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Position__c.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>